# EmergeControlTower

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOY-FLY.md  Dockerfile  fly.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  vitest.config.ts  wrangler.jsonc
01-content-factory/: index.ts
01-content-factory/agents/: adcopy-agent.ts  blog-agent.ts  (+5 more)
attached_assets/: Pasted-1-Textual-Components-textual-These-are-editable-documents-containing-brand-messaging-guidelines-1764571619625_1764571619625.txt  Pasted-Absolutely-let-s-implement-this-Building-on-the-Python-enhancements-we-ll-now-integrate-the-brand-1764570253174_1764570253175.txt  Pasted-Based-on-my-scan-of-the-repository-at-https-github-com-ralch22-EmergeControlTower-the-content-fa-1764569495769_1764569495770.txt  Pasted-DIA-Downloading-assets-failed-Asset-URL-not-downloadable-403-https-shotstack-ingest-api-dev-so-1764512337550_1764512337550.txt  Pasted-Excellent-incorporating-this-expanded-plan-strengthens-the-system-s-reliability-I-ll-build-on-your-1764570119693_1764570119693.txt  Pasted-How-to-Build-the-Content-Factory-Agent-in-7-Days-The-exact-agent-that-replaces-2-3-full-time-writer-1764475697767_1764475697767.txt  Pasted-Yes-I-d-love-for-you-to-implement-this-it-s-a-great-evolution-of-the-system-Since-I-can-t-directly-1764569769296_1764569769297.txt  Pasted-Yes-I-d-love-for-you-to-implement-this-it-s-a-great-evolution-of-the-system-Since-I-can-t-directly-1764569880323_1764569880323.txt  gen-lang-client-0274381734-a4f3e3fc3b12_1764507227753.json
client/: index.html
docker/: entrypoint.sh
script/: build.ts  seed-clients.ts  seed.ts
scripts/: apply-migration-A.ts  apply-migration-A2.ts  seed-jpools-acc.ts  seed-shield-finance.ts
server/: db.ts  index.ts  r2.ts  routes.ts  storage.ts  test-runner.ts
shared/: archetypes.ts  schema.ts
test-results/: vitest-results.json
tests/: comprehensive-test-runner.ts  setup.ts
workers/: proxy.ts  tsconfig.json
(+134 files in other folders)
