[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "anthropic>=0.75.0",
    "fastapi>=0.122.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.0.10",
    "langgraph>=1.0.1",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
